[#54625] Pagination and styling

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/load-results.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/load-results.html
@@ -13,12 +13,13 @@
       name="dropdown_options"
       hx-trigger="change"
       hx-target=".content"
+      hx-select=".content"
       hx-swap="outerHTML"
       hx-get="{{ request.path }}">
 
-  <input type="hidden" name="page" id="page" value={{ page_obj.number }}>
+  <input type="hidden" name="page" id="page" value={{ page_obj.number }} />
 
-  <select name="paginate_by" id="paginate_by">
+  <select name="paginate_by" id="paginate_by" autocomplete="off">
     {% for option in paginate_by_options %}
       <option value="{{ option }}"
               {% if option == paginate_by %} selected="selected"{% endif %}>
