--- a/src/os2datascanner/projects/static/scss/components/_organizations.scss
+++ b/src/os2datascanner/projects/static/scss/components/_organizations.scss
@@ -65,70 +65,59 @@
 
   .root {
 
-    ul {
+    li:last-of-type {
+      padding-bottom: 0;
       margin-bottom: 0;
     }
-
-    li {
-      margin-top: 0.5rem;
-
-      &:last-of-type {
-        padding-bottom: 0;
-        margin-bottom: 0;
-      }
-    }
-  }
-
-  .orgunit_name {
-    display: inline-block;
-    width: 30%;
-    min-width: fit-content;
-  }
-
-  .orgunit_members {
-    font-style: italic;
-    display: inline-block;
-    width: 15%;
-    min-width: fit-content;
-  }
-
-  .orgunit_managers {
-    display: inline-block;
-    width: 20%;
-    min-width: fit-content;
-
-    ul {
-      list-style: none;
-      display: inline;
-
-      li {
-        display: inline;
-        margin: 0;
-
-        &:not(:last-of-type)::after {
-          content: ", ";
-        }
-      }
-    }
-
-    .select_manager {
-      height: 2rem;
-      width: 15rem;
-      font-size: inherit;
-      font-weight: inherit;
-    }
-
-    .manager_li {
-      cursor: pointer;
-
-      &:hover {
-        text-decoration: line-through;
-
-      }
-    }
-
   }
 }
+
+.orgunit_name {
+  display: inline-block;
+  width: 30%;
+  min-width: fit-content;
+}
+
+.orgunit_members {
+  font-style: italic;
+  display: inline-block;
+  width: 15%;
+  min-width: fit-content;
+}
+
+.datatable__column--managers {
+
+  ul {
+    list-style: none;
+    display: inline;
+
+    li {
+      display: inline;
+      margin: 0;
+
+      &:not(:last-of-type)::after {
+        content: ", ";
+      }
+    }
+  }
+
+  .select_manager {
+    height: 2rem;
+    width: 15rem;
+    font-size: inherit;
+    font-weight: inherit;
+  }
+
+  .manager_li {
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: line-through;
+
+    }
+  }
+}
+
 
 .orgunits {
   display: flex;
