--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_element.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_element.html
@@ -1,8 +1,10 @@
 {% load i18n %}
 
 <tr id="orgunit__{{ node.pk }}"
-    class="{% if node.pk in search_targets %}highlighted{% endif %}">
-  <td class="datatable__column--name">{{ node.name }}</td>
+    class="{% if node.pk in search_targets %}highlighted{% endif %} level-{{ node.get_depth }}">
+  <td class="datatable__column--name">
+    <span class="orgunit_name">{{ node.name }}</span>
+  </td>
   <td class="datatable__column--accounts">{{ node.members_associated }} {% trans "accounts associated." %}</td>
   <td class="datatable__column--managers">
     <ul>
@@ -46,13 +48,13 @@
       </li>
     </ul>
   </td>
+  {% if node.children.exists %}
+    {% for node in node.children.all %}
+      {% include "organizations/orgunit_element.html" %}
+    {% endfor %}
+  {% endif %}
 </tr>
 
-{% if node.children.exists %}
-  {% for node in node.children.all %}
-    {% include "organizations/orgunit_element.html" %}
-  {% endfor %}
-{% endif %}
 
 {% comment %} <li id="orgunit__{{ node.pk }}" class="orgunit-list-element {% if node.children.exists %}has_children{% endif %} {% if node.pk in search_targets %}highlighted{% endif %}">
   <span class="orgunit_name">{{ node.name }}</span>
