--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_element.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_element.html
@@ -1,9 +1,15 @@
 {% load i18n %}
 
 <tr id="orgunit__{{ node.pk }}"
-    class="{% if node.pk in search_targets %}highlighted{% endif %} level-{{ node.get_depth }}">
+    class="{% if node.pk in search_targets %}highlighted{% endif %} level-{{ node.get_depth }} {% if node.children.exists %}has_children{% endif %}">
   <td class="datatable__column--name">
-    <span class="orgunit_name">{{ node.name }}</span>
+    <span class="orgunit_name">
+      {% if node.children.exists %}
+        <button class="expand-children button button-caret button--has-icon">
+          <i class="material-icons" aria-hidden="true">expand_more</i>
+        </button>
+      {% endif %}
+    {{ node.name }}</span>
   </td>
   <td class="datatable__column--accounts">{{ node.members_associated }} {% trans "accounts associated." %}</td>
   <td class="datatable__column--managers">
@@ -54,41 +60,3 @@
     {% endfor %}
   {% endif %}
 </tr>
-
-
-{% comment %} <li id="orgunit__{{ node.pk }}" class="orgunit-list-element {% if node.children.exists %}has_children{% endif %} {% if node.pk in search_targets %}highlighted{% endif %}">
-  <span class="orgunit_name">{{ node.name }}</span>
-  <span class="orgunit_members">{{ node.members_associated }} {% trans "accounts associated." %}</span>
-  <span class="orgunit_managers">{% trans "Managers" %}:
-    <ul>
-      {% for manager_pos in node.managers %}
-        <li class="manager_li" title="{% trans "Click to remove" %} {{ manager_pos.account.get_full_name }} {% trans "as manager of" %} {{ node }}." hx-post="" hx-swap="outerHTML" hx-target="#orgunit__{{ node.pk }}" hx-select="#orgunit__{{ node.pk }}" hx-trigger="click" hx-vals='{"orgunit": "{{ node.pk }}", "rem-manager": "{{ manager_pos.account.uuid }}"}' hx-confirm="{% trans "Are you sure you want to remove" %} {{ manager_pos.account.get_full_name }} {% trans "as manager of" %} {{ node }}?">
-          {{ manager_pos.account.get_full_name }}
-        </li>
-      {% endfor %}
-      <li class="add_manager">
-        <button type="button" class="add_manager_button button button--small">
-          <svg class="icon">
-            <use xlink:href="/static/svg/symbol-defs.svg#icon-plus"></use>
-          </svg>
-        </button>
-        <select class="select_manager" name="add-manager" hidden hx-post="" hx-swap="outerHTML" hx-target="#orgunit__{{ node.pk }}" hx-select="#orgunit__{{ node.pk }}" hx-trigger="change" hx-vals='{"orgunit": "{{ node.pk }}"}'>
-          <option value="">
-            {% trans "Choose new manager" %}
-          </option>
-          {% for account in accounts %}
-            <option value="{{ account.uuid }}">
-              {{ account.get_full_name }}
-            </option>
-          {% endfor %}
-        </select>
-      </li>
-    </ul>
-</span> {% endcomment %}
-
-{% comment %} <ul class="children" hidden>
-    {% for node in node.children.all %}
-      {% include "organizations/orgunit_element.html" %}
-    {% endfor %}
-  </ul>
-</li> {% endcomment %}
