[#54625] Styling and empty page

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/load-results.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/load-results.html
@@ -15,6 +15,7 @@
       hx-target=".content"
       hx-select=".content"
       hx-swap="outerHTML"
+      hx-include="[id='dropdown_options'],[id='filter_form']"
       hx-get="{{ request.path }}">
 
   <input type="hidden" name="page" id="page" value={{ page_obj.number }} />
