--- a/src/os2datascanner/projects/admin/adminapp/templates/components/pagination.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/pagination.html
@@ -15,7 +15,7 @@
                hx-select=".content"
                hx-swap="outerHTML"
                hx-trigger="click"
-               hx-include="[id='dropdown_options']">
+               hx-include="[id='dropdown_options'],[id='filter_form']">
             {% if page_obj.previous_page_number != 0 %}
               <a class="link link--pre flex"
                  href="#"
