--- a/src/os2datascanner/projects/static/scss/components/_organizations.scss
+++ b/src/os2datascanner/projects/static/scss/components/_organizations.scss
@@ -72,6 +72,14 @@
   }
 }
 
+.no_units {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-style: italic;
+  margin: 1rem 0;
+}
+
 .orgunit.datatable {
 
   td.datatable__column--name span {
