--- a/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
@@ -136,6 +136,7 @@
                 hx-get="{% if request.path == "/" %}{% url "index" %}{% elif request.path == "/archive" %}{% url "archive" %}{% endif %}"
                 hx-swap="innerHTML"
                 hx-target=".content"
+                hx-select=".content"
                 hx-include="[id='filter_form'], [id='dropdown_options']"
                 hx-params="not resolution_status"
                 hx-indicator="#report-page-indicator">
