--- a/src/os2datascanner/projects/admin/adminapp/templates/components/analysis-template.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/analysis-template.html
@@ -42,7 +42,7 @@
       <a
         href="#run-analysis-modal" {# This needs creation, backend not ready #}
         data-modal="modal:open"
-        data-src="/analysis/run/{{ selected_scanner.first.uuid }}"
+        data-src="/analysis/overview/{{ selected_scanner.first.pk }}/run"
         class="button button--small button--grey"
         title="{% trans 'Run analysis scan' %}">
         <svg class="icon">
