--- a/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/filters.html
@@ -7,7 +7,7 @@
       hx-select=".content"
       hx-get="{{ request.path }}"
       hx-swap="outerHTML"
-      hx-trigger="change"
+      hx-trigger="change, click from:#search_button, keyup delay:200ms from:#search_field"
       hx-include="[id='dropdown_options']"
       hx-indicator="#report-page-indicator"
 >
@@ -24,13 +24,15 @@
   <input type="hidden" name="order" id="order" value="{{ order }}">
 
 
-<div class="search_field_wrapper">
-  {% comment %} <label for="search_field" class="match_filtering_label">{% trans "Search for path" %}</label> {% endcomment %}
-  <input class="form-control" type="search" name="search_field" id="search_field" placeholder="{% trans "Search for a path..." %}"
-  value="{{ request.GET.search_field }}"
-  >
-  <button class="button" id="search_button">{% trans "Search" %}</button>
-</div>
+  <div class="wide search_field_wrapper">
+    <label for="search_field">{% trans "Search for path" %}</label>
+    <input type="search"
+           name="search_field"
+           id="search_field"
+           placeholder="{% trans "Search for a path..." %}"
+           value="{{ request.GET.search_field }}">
+    {% comment %} <button type="button" class="button" id="search_button">{% trans "Search" %}</button> {% endcomment %}
+  </div>
 
   <div class="match_filtering_wrapper">
     <div>
