--- a/src/os2datascanner/projects/static/admin/css/widgets.css
+++ b/src/os2datascanner/projects/static/admin/css/widgets.css
@@ -10,7 +10,7 @@
     height: 17.2em;
 }
 .selector .selector-chosen select {
-    height:278px !important;
+    height:278px ;
 }
 .selector-available, .selector-chosen {
     float: left;
@@ -381,8 +381,8 @@ span.clearable-file-input label {
 }
 
 .calendar-cancel {
-    margin: 0 !important;
-    padding: 0 !important;
+    margin: 0 ;
+    padding: 0 ;
     font-size: 10px;
     background: #e1e1e1 url(../img/nav-bg.gif) 0 50% repeat-x;
     border-top: 1px solid #ddd;
@@ -411,8 +411,8 @@ ul.timelist, .timelist li {
 
 ul.orderer {
     position: relative;
-    padding: 0 !important;
-    margin: 0 !important;
+    padding: 0 ;
+    margin: 0 ;
     list-style-type: none;
 }
 
@@ -437,7 +437,7 @@ ul.orderer li a.selector {
     margin-left: 12px;
     overflow: hidden;
     width: 83%;
-    font-size: 10px !important;
+    font-size: 10px ;
     padding: 0.6em 0;
 }
 
@@ -528,7 +528,7 @@ ul.orderer li.deleted:hover, ul.orderer li.deleted a.selector:hover {
 }
 
 .editinline tr.deleted td:first-child {
-    background-image: none !important;
+    background-image: none ;
 }
 
 /* EDIT INLINE - STACKED */
