--- a/src/os2datascanner/projects/static/scss/_base.scss
+++ b/src/os2datascanner/projects/static/scss/_base.scss
@@ -23,11 +23,11 @@ img {
 }
 
 .align-right {
-  text-align: right !important;
+  text-align: right ;
 }
 
 .align-left {
-  text-align: left !important;
+  text-align: left ;
 }
 
 .material-icons {
