--- a/src/os2datascanner/projects/static/scss/components/_filters.scss
+++ b/src/os2datascanner/projects/static/scss/components/_filters.scss
@@ -91,7 +91,7 @@
 
   input[type=search] {
     background-color: var(--color-widget-bg);
-    border: none !important;
+    border: none ;
     box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
     font-size: 1rem;
     outline: none;
