--- a/src/os2datascanner/projects/static/scss/components/_navigation.scss
+++ b/src/os2datascanner/projects/static/scss/components/_navigation.scss
@@ -11,7 +11,7 @@
     width: 15rem;
     min-width: 15rem; // for IE11's sake, otherwise element will collapse completely if next to something that has flex-grow: 1
     min-height: 100%;
-    display: block !important;
+    display: block;
     box-shadow: none !important; // for some reason, IE11 ignores box-shadow: none; here, and falls back to the base style (ln. 6) which has a box-shadow
 
     .navi {
@@ -246,20 +246,20 @@
 
 @media (min-width: $break-lg) {
   .navi .logout {
-    display: none !important;
+    display: none ;
   }
 
   .navi .profile {
-    display: none !important;
+    display: none ;
   }
 }
 
 @media screen and (min-width: $break-lg) {
   .navi li a.active::before {
-    display: block !important;
+    display: block ;
   }
 
   .navi li a.active::after {
-    display: block !important;
+    display: block ;
   }
 }
