--- a/src/os2datascanner/projects/static/scss/components/_rule-builder.scss
+++ b/src/os2datascanner/projects/static/scss/components/_rule-builder.scss
@@ -7,7 +7,7 @@
     max-width: 100%;
     box-sizing: border-box;
     margin: 0;
-    border: none !important;
+    border: none ;
     box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
     appearance: none;
     background-color: var(--color-widget-bg);
