--- a/src/os2datascanner/projects/static/scss/components/_select-rules.scss
+++ b/src/os2datascanner/projects/static/scss/components/_select-rules.scss
@@ -138,7 +138,7 @@
 
 //Filter
 .employee-filter {
-  padding: .5rem !important;
+  padding: .5rem;
   margin-bottom: 1rem;
   background-position: 1rem .5rem;
   background-image: url('../svg/search.svg');
