[#41817] Extend the admin system with optional single-file scan support
The administration system has responsibility for every part of this: the
pipeline is executed and its results visualised inside a Django view. It
might be nice to make this into a client of the API server in future, but
for now I just wanted something to work reasonably quickly

--- a/src/os2datascanner/projects/static/scss/components/_indicator.scss
+++ b/src/os2datascanner/projects/static/scss/components/_indicator.scss
@@ -45,3 +45,21 @@
     transform: rotate(360deg);
   }
 }
+
+div.spinner {
+  position: fixed;
+  z-index: 255;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  background-color: white;
+  cursor: wait;
+
+  display: none;
+}
+
+div.spinner.htmx-request {
+  display: block;
+}
