[#41817] Add support for hiding the rule builder's JSON display widget

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/admin-widgets/rule-builder.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/admin-widgets/rule-builder.html
@@ -12,6 +12,7 @@
 
 <textarea id="id_rule"
           class="watcher"
+          {% if hidden %}hidden{% endif %}
           data-selector="#select_slot"
           data-function="stringifyRule"
           name="{{ widget.name|default:"rule" }}"
